367 Correct Spacing

--- a/web-client/src/styles/overrides.scss
+++ b/web-client/src/styles/overrides.scss
@@ -128,3 +128,7 @@
 .usa-input-error select {
   width: calc(100%);
 }
+
+.no-bottom-margin {
+  margin-bottom: 0;
+}
